--- a/supervision/pom.xml
+++ b/supervision/pom.xml
@@ -38,6 +38,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
+            <version>1.4.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+
 
 </project>
